// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typed_table.sql > line 1 1`] = `
[
  "CREATE TABLE ttable1 OF nothing",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "ofTypename": {
              "location": 24,
              "names": [
                {
                  "String": {
                    "sval": "nothing",
                  },
                },
              ],
              "typemod": -1,
            },
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ttable1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 3 1`] = `
[
  "CREATE TYPE person_type AS (id int, name text)",
  {
    "stmts": [
      {
        "stmt": {
          "CompositeTypeStmt": {
            "coldeflist": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 28,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "name",
                  "is_local": true,
                  "location": 36,
                  "typeName": {
                    "location": 41,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
            "typevar": {
              "location": 12,
              "relname": "person_type",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 15 1`] = `
[
  "SELECT * FROM get_all_persons()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "get_all_persons",
                                  },
                                },
                              ],
                              "location": 14,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 18 1`] = `
[
  "ALTER TABLE persons ADD COLUMN comment text",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "ColumnDef": {
                      "colname": "comment",
                      "is_local": true,
                      "location": 31,
                      "typeName": {
                        "location": 39,
                        "names": [
                          {
                            "String": {
                              "sval": "text",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                  "subtype": "AT_AddColumn",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "persons",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 25 1`] = `
[
  "CREATE TABLE personsx OF person_type (myname WITH OPTIONS NOT NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "ofTypename": {
              "location": 25,
              "names": [
                {
                  "String": {
                    "sval": "person_type",
                  },
                },
              ],
              "typemod": -1,
            },
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "personsx",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "myname",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_NOTNULL",
                        "location": 58,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 38,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 25 2`] = `
[
  " -- error

CREATE TABLE persons2 OF person_type (
    id WITH OPTIONS PRIMARY KEY,
    UNIQUE (name)
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "ofTypename": {
              "location": 36,
              "names": [
                {
                  "String": {
                    "sval": "person_type",
                  },
                },
              ],
              "typemod": -1,
            },
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 24,
              "relname": "persons2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 70,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 54,
                },
              },
              {
                "Constraint": {
                  "contype": "CONSTR_UNIQUE",
                  "keys": [
                    {
                      "String": {
                        "sval": "name",
                      },
                    },
                  ],
                  "location": 87,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 46 1`] = `
[
  "DROP TYPE person_type RESTRICT",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "TypeName": {
                  "location": 10,
                  "names": [
                    {
                      "String": {
                        "sval": "person_type",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "removeType": "OBJECT_TYPE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 49 1`] = `
[
  "CREATE TABLE persons5 OF stuff",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "ofTypename": {
              "location": 25,
              "names": [
                {
                  "String": {
                    "sval": "stuff",
                  },
                },
              ],
              "typemod": -1,
            },
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "persons5",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 49 2`] = `
[
  " -- only CREATE TYPE AS types may be used

DROP TABLE stuff",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "stuff",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`typed_table.sql > line 60 1`] = `
[
  "CREATE FUNCTION namelen(person_type) RETURNS int LANGUAGE SQL AS $$ SELECT length($1.name) $$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "namelen",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 49,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " SELECT length($1.name) ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 62,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "person_type",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 45,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
